# automation-with-agentic-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.mock-linux  Dockerfile.mock-windows  INITIALIZATION.md  LICENSE  README.md  ansible.cfg  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  nginx_playbook.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_test_env.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/hooks/: pre-commit
.github/workflows/: python-ci.yml
config/: config.prod.toml  config.toml
docs/: ansible-llm-integration-spec.md  model_management.md  production_deployment.md
examples/windows_ssh/: WINDOWS_SSH_QUICKSTART.md  demo.sh  inventory.ini  setup_guide.md  setup_openssh_server.yml
monitoring/prometheus/: prometheus.yml
scripts/: fix_ssh.sh  generate_env.sh  release.sh  set_cpu_env.sh  setup_cpu_bnb.sh  setup_dev.sh
src/: README.md  __init__.py  main.py
src/ansible_plugins/: __init__.py
src/api/: __init__.py  auth.py  cli.py  cli_runner.py  cli_wrapper.py  direct_cli.py  rest_api.py
src/config/: __init__.py
src/llm_engine/: __init__.py  linux_processor.py  model_download.py  model_loader.py  prompt_templates.py  response_processor.py  windows_processor.py
src/utils/: __init__.py  logger.py  metrics.py  system_check.py
tests/integration/: test_cli.py  test_integration.py  test_linux_advanced.py  test_linux_integration.py  (+2 more)
(+34 files in other folders)
