[metadata]
name = ansible-llm
version = 0.1.0
description = Integration of TinyLlama 3 with Ansible automation engine
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: System :: Installation/Setup
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    ansible>=2.14.0
    ansible-core>=2.14.0
    torch>=2.0.0
    transformers>=4.30.0
    pyyaml>=6.0
    fastapi>=0.100.0
    uvicorn>=0.22.0
    python-dotenv>=1.0.0
    click>=8.1.3
    rich>=13.3.5
    huggingface-hub>=0.16.0
    tqdm>=4.65.0
    numpy>=1.24.0
    sentencepiece>=0.1.99
    paramiko>=3.2.0
    tomli>=2.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ansible-llm = src.main:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv
ignore = E203, W503
